--- a/index.html
+++ b/index.html
@@ -20,67 +20,73 @@
 
 <!-- Info Here -->
 
+  <div class="container">
+    <div class="row justify-content-center">
       <div class="card" style="width: 100%;">
         <div class="card-header">
           Current Train Scheduler
         </div>
 
-        <div class="container">
-            <div class="row">
-              <div class="col">
-                Train Name
-              </div>
-              <div class="col">
-                Destination
-              </div>
-              <div class="col">
-                Frequency (min)
-              </div>
-              <div class="col">
-                Next Arrival
-              </div>
-              <div class="col">
-                Minutes Away
-              </div>
-            </div>
-          </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Train Name</th>
+              <th scope="col">Destination</th>
+              <th scope="col">Frequency (min)</th>
+              <th scope="col">Next Arrival</th>
+              <th scope="col">Minutes Away</th>
+            </tr>
+          </thead>
+          <tbody id="table-body">
 
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Example Example</li>
-        </ul>
+          </tbody>
+        </table>
       </div>
+    </div>
+  </div>
 
 <!-- Form Here -->
 
+  <div class="container">
+    <div class="row justify-content-center">
       <div class="card" style="width: 100%;">
         <div class="card-header">
           Add Train
         </div>
       
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Train Name</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Destination</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">First Train Time (HH:mm - military time)</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Frequency (min)</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <form>
+          <div class="form-group">
+              <label for="name">Train Name</label>
+              <input id="name" class="form-control form-control-sm" type="text" placeholder="H Train">
+          </div>
+          <div class="form-group">
+              <label for="location">Destination</label>
+              <input id="location" class="form-control form-control-sm" type="text" placeholder="Houston">
+          </div>
+          <div class="form-group">
+              <label for="time">First Train Time (HH:mm - military time)</label>
+              <input id="time" class="form-control form-control-sm" type="text" placeholder="23:19">
+          </div>
+          <div class="form-group">
+              <label for="frequency">Frequency (min)</label>
+              <input id="frequency" class="form-control form-control-sm" type="text" placeholder="22">
+          </div>
+          <input class="btn btn-primary" type="submit" value="Submit">
       </form>
       </div>
+    </div>
+    </div>
 
-    <script src="assets/javascript/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+
+    <script src="assets/javascript/app.js"></script>
+
+  </body>
 </html>
