--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Scheduler</title>
@@ -57,7 +57,7 @@
         <form>
           <div class="form-group">
               <label for="name">Train Name</label>
-              <input id="name" class="form-control form-control-sm" type="text" placeholder="H Train">
+              <input id="name" class="form-control form-control-sm" type="text" placeholder="Midnight Train">
           </div>
           <div class="form-group">
               <label for="location">Destination</label>
@@ -71,7 +71,7 @@
               <label for="frequency">Frequency (min)</label>
               <input id="frequency" class="form-control form-control-sm" type="text" placeholder="22">
           </div>
-          <input class="btn btn-primary" type="submit" value="Submit">
+          <input id="submit" class="btn btn-primary" type="submit" value="Submit">
       </form>
       </div>
     </div>
